[package]
name = "pallet-futarchy"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-support = { default-features = false, version = "4.0.0-dev" }
frame-system = { default-features = false, version = "4.0.0-dev" }
sp-runtime = { default-features = false, version = "24.0.0" }
sp-std = { default-features = false, version = "8.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
]
